--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Crussssh</title>
+    <title>Crush</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -39,16 +39,16 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
+          <h2 id="text3">Chào Nghi, Nghi có thích tớ không ? ._.</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            Nghi mà không trả lời hoặc thoát ra là coi như thích đấy =))
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Yêu ơi là yêuuuuuu <333
+          Có! tớ thích cậu 
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Không , tớ ghét cậu
         </button>
       </div>
     </div>
