--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Chào Nghi, Nghi có thích tớ không ? ._.</h2>
-          <h4 id="text4">
-            Nghi mà không trả lời hoặc thoát ra là coi như thích đấy =))
-          </h4>
+          <h2 id="text3">Chào Nghi, Nghi có thích tớ không ? </h2>
+          <h4 id="text4"> Nghi mà không trả lời hoặc thoát ra là coi như thích đấy =))</h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
           Có! tớ thích cậu 
